--- a/src/app/i18n/i18n.component.html
+++ b/src/app/i18n/i18n.component.html
@@ -3,6 +3,7 @@
   <span>Switch languages at runtime: </span>
   <button (click)="useLanguage('en')">en</button>
   <button (click)="useLanguage('cn')">cn</button>
+  <button (click)="useLanguage('tw')">cn</button>
 </div>
 <div>
   <h3>Pluralization</h3>
@@ -29,8 +30,6 @@
   <p id="icuSelect" translate [translateParams]="{ gender, 'product': 'BabelEdit' }">icu.select</p>
   <p>{{ 'icu.select' | translate:{gender, 'product': 'BabelEdit'} }}</p>
 </div>
-<div [innerHTML]="'demo.paragraph' | translate"></div>
-<p [translate]="'icu.pluralization'" [translateParams]="{count}"></p>
 <div>
   <h2>Simple translations without parameters</h2>
 
@@ -40,6 +39,7 @@
 
   <p translate>demo.simple.text-as-content</p>
 </div>
+<div [innerHTML]="'demo.paragraph' | translate"></div>
 <div>
   <h2>Translations with parameters</h2>
 
