--- a/src/app/i18n/i18n.component.html
+++ b/src/app/i18n/i18n.component.html
@@ -1,9 +1,9 @@
 <div class="title">
   <h1>{{ 'demo.title' | translate }}</h1>
   <span>Switch languages at runtime: </span>
-  <button (click)="useLanguage('en')">en</button>
-  <button (click)="useLanguage('cn')">cn</button>
-  <button (click)="useLanguage('tw')">cn</button>
+  <button (click)="useLanguage('en')">EN</button>
+  <button (click)="useLanguage('cn')">简</button>
+  <button (click)="useLanguage('tw')">繁</button>
 </div>
 <div>
   <h3>Pluralization</h3>
