--- a/src/app/shared-content/shared-content.component.html
+++ b/src/app/shared-content/shared-content.component.html
@@ -1,4 +1,4 @@
-<div class="content-div">
+<div class="content-div" [@routeAnimations]="getRouteAnimationData()">
   <!-- router -->
-  <router-outlet />
+  <router-outlet/>
 </div>
