--- a/src/app/shared-navigation/shared-navigation.component.html
+++ b/src/app/shared-navigation/shared-navigation.component.html
@@ -10,7 +10,7 @@
       <li><a routerLink="/actor-form-template">ACTOR FORM TEMPLATE</a></li>
       <li><a routerLink="/question">QUESTION</a></li>
       <li><a routerLink="/i18n">I18N</a></li>
-      <li><a routerLink="/B">LINK B</a></li>
+      <li><a routerLink="/animation">ANIMATION</a></li>
       <li><a routerLink="/A">LINK A</a></li>
       <li><a routerLink="/B">LINK B</a></li>
       <li><a routerLink="/A">LINK A</a></li>
