https://angular.cn/guide/signals angular 信号 模型输入

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,5 @@
+<p>Received data: {{ userId() }}</p>
 <ng-container *ngIf="user$ | async as user">
-  <p>Name: {{ user.name }}</p>
-  <p>Biography: {{ user.biography }}</p>
+  <p>Name: {{ user.userName }}</p>
+  <p>Email: {{ user.mail }}</p>
 </ng-container>
