--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
-<div>
+<div class="form-group">
   <h1>Parent Component</h1>
-  <input type="text" [(ngModel)]="user.userId"/>
+  <input type="text" class="form-control" [(ngModel)]="user.userId"/>
   <app-user-profile [userId]="user.userId"></app-user-profile>
 </div>
