自定义管道

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -3,3 +3,9 @@
   <p>Name: {{ user.userName }}</p>
   <p>Email: {{ user.email }}</p>
 </ng-container>
+
+<ng-container *ngFor="let user of users$ | async">
+  <p>ID: {{ user.id | base64ToHex }}</p>
+  <p>Name: {{ user.userName }}</p>
+  <p>Email: {{ user.email }}</p>
+</ng-container>
