--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,6 @@
 @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+
+* {
+  font-family: '仿宋', 'FangSong', 'SimSun', 'Avenir', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+}
